Fri May 30 12:49:42 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* AUTHORS, ROADMAP, configure.ac: Update for 0.10.0.

Wed May 28 13:26:44 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, README: Update for 0.10.0.

Wed May 28 10:43:31 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Restructuring of gconf keys.	

Tue May 20 12:41:44 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.schemas.in: Grammar fixes.
	* src/prefs.c (window_prefs): Reword movement commands tooltip a bit.

Fri May  2 11:25:36 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Big patch from Remi Bonnet on the automapper.

	* po/*.po: Updated.

Wed Apr  9 14:22:59 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: Install desktop file in the freedesktop compliant
	directory.

	* configure.ac: Unquoted GETTEXT_PACKAGE.

Mon Apr  7 15:59:36 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* configure.ac: Changed gtetrinet to gnome-mud :)

Fri Apr  4 19:19:37 IST 2003  Naba Kumar   <naba@gnome.org>

	* src/keybinding.c(keybind_button_add_clicked_cb): Fixed a memory leak.
	Fixed a crash bug due to inappropriate looping of KEYBIND_DATA list
	in a for loop (crash occurs when we try to add the second keybinding).
	
	* src/gnome-mud.h(main): Calls gnome_init() before
	gconf_client_get_default() (and fixes a crash bug).
	
	* src/data.c(data_button_add): Fixed a crash bug (which occurs
	when we try to add the second trigger definition). The argument
	to the strdupv() should be a NULL terminated -- added third item
	in list[] and set it to NULL.
	
Sat Apr  5 00:14:55 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Define and substitute GETTEXT_PACKAGE.
	
	* src/prefs.c (window_prefs): Added missing mnemonic.

Thu Apr  3 19:53:42 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.schemas.in: Typo and style fixes.

	* src/prefs.c (window_prefs): Reword some tooltips.
	Add mnemonics to preferences.
	