@@ -1,6 +1,5 @@
-
-SUBDIRS = gnome-mud-manual gnome-mud-plugin-api
+SUBDIRS = gnome-mud-manual gnome-mud-plugin-api omf-install
 
 man_MANS = gnome-mud.6
 
-EXTRA_DIST = sgmldocs.make $(man_MANS)
+EXTRA_DIST = xmldocs.make $(man_MANS)
