@@ -1,3 +1,15 @@
+Mon Jun  2 17:08:47 CEST 2003  Jordi Mallach  <jordi@sindominio.net>
+
+	* doc/gnome-mud-manual/C/gnome-mud-manual.sgml: Rename to .xml.
+	* doc/gnome-mud-manual/C/gnome-mud-manual.xml: Convert to GNOME2
+	documentation format.
+	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.sgml,
+	doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml: Likewise.
+	* doc/omf-output/Makefile.am: Added, scrollkeeper stuff.
+	* doc/Makefile.am: Updated.
+	* configure.ac: add doc/omf-install/Makefile to AC_OUTPUT.
+
+
 Fri May 30 12:49:42 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>
 
 	* AUTHORS, ROADMAP, configure.ac: Update for 0.10.0.
